add cases api
